# pipe-dream

./: Cargo.toml  README.md  build.rs
notes/: todo.org  workflow_improvements.org
src/: main.rs  nushell.rs  output.rs  shell.rs  theme.rs  ui.rs
src/ui/: pipe_dream.rs
ui/: main.slint
