[package]
name = "pipe-dream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s-macro = "0.1"
relm4 = "0.6"
thiserror = "1.0"
nu-protocol = "0.88"
nu-engine = "0.88"
nu-parser = "0.88"
nu-command = "0.88"
nu-cmd-lang = "0.88"
dirs = "5.0"
once_cell = "1.17"