[package]
name = "pipe-dream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7"
nu-engine = "0.96"
nu-protocol = "0.96"
nu-parser = "0.96"
nu-command = "0.96"
nu-cmd-lang = "0.96"
nu-std = "0.96"
miette = "7.2"
thiserror = "1.0"
dirs = "5.0"

[build-dependencies]
slint-build = "1.7"